[gd_scene load_steps=29 format=3 uid="uid://hhktk8sc37nu"]

[ext_resource type="Script" path="res://Scripts/end_screen.gd" id="1_ijt5m"]
[ext_resource type="FontFile" uid="uid://dh3r0t715nyei" path="res://fonts/m5x7.ttf" id="3_ixrsq"]
[ext_resource type="Texture2D" uid="uid://dgccxaaxedvst" path="res://assets/truck/truck_interiror.png" id="4_f6sal"]
[ext_resource type="Texture2D" uid="uid://bt3q6ouw511j0" path="res://assets/truck/coinslot.png" id="5_fluxl"]
[ext_resource type="Texture2D" uid="uid://dm22sxr4y001u" path="res://assets/truck/table.png" id="6_grrm2"]
[ext_resource type="AudioStream" uid="uid://bo411ci4qyov4" path="res://sounds/iceCreamAmbient.wav" id="7_kbr1y"]
[ext_resource type="Script" path="res://Scripts/freezer.gd" id="8_vt4e8"]
[ext_resource type="Texture2D" uid="uid://dlth6hubtcawe" path="res://assets/truck/drawertentaclesleft.png" id="9_s5j28"]
[ext_resource type="Texture2D" uid="uid://qr71e5ik1rkk" path="res://assets/truck/cooler_1_open.png" id="10_a6opx"]
[ext_resource type="AudioStream" uid="uid://btvicn5kivs54" path="res://sounds/freezer_open.mp3" id="11_gpctr"]
[ext_resource type="Texture2D" uid="uid://jrmgi5502ymv" path="res://assets/truck/cooler_2_open.png" id="12_rf7y7"]
[ext_resource type="Texture2D" uid="uid://dvfxby7yj3oqv" path="res://assets/truck/drawertentaclesmiddle.png" id="13_dfole"]
[ext_resource type="Texture2D" uid="uid://d1uiby8u5m77r" path="res://assets/truck/cooler_3_open.png" id="14_qgt73"]
[ext_resource type="Texture2D" uid="uid://cpklb1nav4c3l" path="res://assets/truck/drawertentaclesright.png" id="15_5nqg8"]
[ext_resource type="AudioStream" uid="uid://b1rljnchf6ceu" path="res://sounds/typewriter noise.mp3" id="16_mc2dm"]
[ext_resource type="AudioStream" uid="uid://dlmqssi0cqby5" path="res://sounds/startGame.mp3" id="17_01xgh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stqa6"]
size = Vector2(183, 139)

[sub_resource type="Animation" id="Animation_kwmd2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tentacle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tentacle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mpg84"]
resource_name = "TentacleDie"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tentacle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="Animation" id="Animation_glnhi"]
resource_name = "TentacleHit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tentacle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 3]
}

[sub_resource type="Animation" id="Animation_fd6wj"]
resource_name = "TentacleSpawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tentacle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_50xyh"]
_data = {
"RESET": SubResource("Animation_kwmd2"),
"TentacleDie": SubResource("Animation_mpg84"),
"TentacleHit": SubResource("Animation_glnhi"),
"TentacleSpawn": SubResource("Animation_fd6wj")
}

[sub_resource type="Animation" id="Animation_0vcn6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(240, 135)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_n7j8t"]
resource_name = "changeScene"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3, 1, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(240, 135), Vector2(240, 135), Vector2(240, 131), Vector2(240, 131), Vector2(240, 453.56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.366667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(4, 4), Vector2(3.73, 3.73)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("music:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-5.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hc4d"]
_data = {
"RESET": SubResource("Animation_0vcn6"),
"changeScene": SubResource("Animation_n7j8t")
}

[sub_resource type="Animation" id="Animation_na6kh"]
resource_name = "start"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../music:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.96667, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-80.0, -80.0, -30.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../music:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2pjok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../music:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../music:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3kqj"]
_data = {
"RESET": SubResource("Animation_2pjok"),
"start": SubResource("Animation_na6kh")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ijt5m")

[node name="result" type="Label" parent="."]
texture_filter = 1
offset_left = 89.0
offset_top = 55.0
offset_right = 150.0
offset_bottom = 68.0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("3_ixrsq")
text = "YOU WON!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dec" type="Label" parent="."]
texture_filter = 1
offset_left = 89.0
offset_top = 91.0
offset_right = 273.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("3_ixrsq")
text = "Your business is thriving!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="customers" type="Label" parent="."]
texture_filter = 1
offset_left = 89.0
offset_top = 113.0
offset_right = 273.0
offset_bottom = 126.0
theme_override_fonts/font = ExtResource("3_ixrsq")
text = "Customers Served: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="money" type="Label" parent="."]
texture_filter = 1
offset_left = 89.0
offset_top = 123.0
offset_right = 273.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("3_ixrsq")
text = "Total Money Earned: $1000.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="soul" type="Label" parent="."]
texture_filter = 1
offset_left = 89.0
offset_top = 133.0
offset_right = 273.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("3_ixrsq")
text = "Total Soul Harvested: 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="insert" type="Label" parent="."]
texture_filter = 1
offset_left = 89.0
offset_top = 152.0
offset_right = 273.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("3_ixrsq")
text = "insert ice cream to play again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="." groups=["customer"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(181.5, 122.5)
shape = SubResource("RectangleShape2D_stqa6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(240, 135)
texture = ExtResource("4_f6sal")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(391, 188)
texture = ExtResource("5_fluxl")

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(180, 204)
texture = ExtResource("6_grrm2")
offset = Vector2(0.5, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(240, 135)
zoom = Vector2(4, 4)

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kbr1y")
volume_db = -80.0

[node name="Freezer" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("8_vt4e8")
mainPath = NodePath("..")
heat = false

[node name="Open" type="Area2D" parent="Freezer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer/Open"]
polygon = PackedVector2Array(84, 215, 141, 218, 120, 259, 56, 253)

[node name="TentacleArea" type="Area2D" parent="Freezer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer/TentacleArea"]
polygon = PackedVector2Array(83, 213, 141, 216, 122, 262, 55, 255, 84, 213)

[node name="Tentacle" type="Sprite2D" parent="Freezer"]
visible = false
texture_filter = 1
position = Vector2(87, 232)
texture = ExtResource("9_s5j28")
offset = Vector2(0.5, 0)
hframes = 7
frame = 1

[node name="FreezerOpen" type="Sprite2D" parent="Freezer"]
visible = false
texture_filter = 1
position = Vector2(100, 214)
texture = ExtResource("10_a6opx")
offset = Vector2(0, 0.5)

[node name="FreezerArea" type="Area2D" parent="Freezer/FreezerOpen" groups=["freezer"]]
position = Vector2(-101, -214)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer/FreezerOpen/FreezerArea"]
polygon = PackedVector2Array(90, 222, 112, 222, 112, 223, 134, 223, 119, 255, 66, 252)
disabled = true

[node name="Close" type="Area2D" parent="Freezer/FreezerOpen"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer/FreezerOpen/Close"]
polygon = PackedVector2Array(-30, -41, -21, -46, 37, -45, 45, 3, 39, 6, -16, 5)

[node name="IceCreamSpawns" type="Node2D" parent="Freezer"]

[node name="SpawnPos" type="Node2D" parent="Freezer/IceCreamSpawns"]
position = Vector2(100, 238)

[node name="SpawnPos2" type="Node2D" parent="Freezer/IceCreamSpawns"]
position = Vector2(92, 226)

[node name="SpawnPos3" type="Node2D" parent="Freezer/IceCreamSpawns"]
position = Vector2(118, 230)

[node name="SpawnPos4" type="Node2D" parent="Freezer/IceCreamSpawns"]
position = Vector2(80, 245)

[node name="SpawnPos5" type="Node2D" parent="Freezer/IceCreamSpawns"]
position = Vector2(107, 251)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Freezer"]
stream = ExtResource("11_gpctr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Freezer"]
libraries = {
"": SubResource("AnimationLibrary_50xyh")
}

[node name="Freezer2" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("8_vt4e8")
mainPath = NodePath("..")
iceCreamID = 1
heat = false

[node name="Open" type="Area2D" parent="Freezer2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer2/Open"]
polygon = PackedVector2Array(150, 220, 156, 218, 209, 220, 206, 259, 128, 259, 147, 218, 155, 218)

[node name="FreezerOpen" type="Sprite2D" parent="Freezer2"]
visible = false
texture_filter = 1
position = Vector2(171, 218)
texture = ExtResource("12_rf7y7")
offset = Vector2(0, 0.5)

[node name="FreezerArea" type="Area2D" parent="Freezer2/FreezerOpen" groups=["freezer"]]
position = Vector2(-101, -214)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer2/FreezerOpen/FreezerArea"]
polygon = PackedVector2Array(81, 225, 129, 226, 126, 247, 72, 248)
disabled = true

[node name="Close" type="Area2D" parent="Freezer2/FreezerOpen" groups=["moneyoccluder"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer2/FreezerOpen/Close"]
polygon = PackedVector2Array(-26, -48, 34, -49, 36, 8, -25, 7, -28, -41)

[node name="IceCreamSpawns" type="Node2D" parent="Freezer2"]

[node name="SpawnPos" type="Node2D" parent="Freezer2/IceCreamSpawns"]
position = Vector2(173, 241)

[node name="SpawnPos2" type="Node2D" parent="Freezer2/IceCreamSpawns"]
position = Vector2(161, 231)

[node name="SpawnPos3" type="Node2D" parent="Freezer2/IceCreamSpawns"]
position = Vector2(187, 231)

[node name="SpawnPos4" type="Node2D" parent="Freezer2/IceCreamSpawns"]
position = Vector2(150, 250)

[node name="SpawnPos5" type="Node2D" parent="Freezer2/IceCreamSpawns"]
position = Vector2(185, 249)

[node name="Tentacle" type="Sprite2D" parent="Freezer2"]
visible = false
texture_filter = 1
position = Vector2(163, 235)
texture = ExtResource("13_dfole")
hframes = 7
frame = 1

[node name="TentacleArea" type="Area2D" parent="Freezer2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer2/TentacleArea"]
polygon = PackedVector2Array(147, 215, 211, 218, 207, 262, 126, 260)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Freezer2"]
stream = ExtResource("11_gpctr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Freezer2"]
libraries = {
"": SubResource("AnimationLibrary_50xyh")
}

[node name="Freezer3" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("8_vt4e8")
mainPath = NodePath("..")
iceCreamID = 2
heat = false

[node name="Open" type="Area2D" parent="Freezer3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer3/Open"]
polygon = PackedVector2Array(213, 220, 272, 220, 296, 257, 215, 259)

[node name="FreezerOpen" type="Sprite2D" parent="Freezer3"]
visible = false
texture_filter = 1
position = Vector2(255, 216)
texture = ExtResource("14_qgt73")
offset = Vector2(0, 0.5)

[node name="FreezerArea" type="Area2D" parent="Freezer3/FreezerOpen" groups=["freezer"]]
position = Vector2(-101, -214)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer3/FreezerOpen/FreezerArea"]
polygon = PackedVector2Array(71, 227, 114, 226, 126, 247, 71, 250)
disabled = true

[node name="Close" type="Area2D" parent="Freezer3/FreezerOpen" groups=["moneyoccluder"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer3/FreezerOpen/Close"]
polygon = PackedVector2Array(-40, 10, 20, 7, 24, -41, 16, -48, -41, -47)

[node name="IceCreamSpawns" type="Node2D" parent="Freezer3"]

[node name="SpawnPos" type="Node2D" parent="Freezer3/IceCreamSpawns"]
position = Vector2(247, 240)

[node name="SpawnPos2" type="Node2D" parent="Freezer3/IceCreamSpawns"]
position = Vector2(228, 230)

[node name="SpawnPos3" type="Node2D" parent="Freezer3/IceCreamSpawns"]
position = Vector2(260, 233)

[node name="SpawnPos4" type="Node2D" parent="Freezer3/IceCreamSpawns"]
position = Vector2(236, 247)

[node name="SpawnPos5" type="Node2D" parent="Freezer3/IceCreamSpawns"]
position = Vector2(266, 247)

[node name="Tentacle" type="Sprite2D" parent="Freezer3"]
visible = false
texture_filter = 1
position = Vector2(250, 236)
texture = ExtResource("15_5nqg8")
hframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Freezer3"]
libraries = {
"": SubResource("AnimationLibrary_50xyh")
}

[node name="TentacleArea" type="Area2D" parent="Freezer3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Freezer3/TentacleArea"]
polygon = PackedVector2Array(213, 218, 273, 218, 297, 259, 214, 260)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Freezer3"]
stream = ExtResource("11_gpctr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2hc4d")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_mc2dm")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_01xgh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 270.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ColorRect"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_right = 240.0
offset_bottom = 135.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("3_ixrsq")
text = "The salesman didn't have any wares today. Instead, he simply informed you that..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_t3kqj")
}
autoplay = "start"

[connection signal="input_event" from="Freezer/Open" to="Freezer" method="_on_open_input_event"]
[connection signal="area_entered" from="Freezer/TentacleArea" to="Freezer" method="_on_tentacle_area_area_entered"]
[connection signal="input_event" from="Freezer/TentacleArea" to="Freezer" method="_on_tentacle_area_input_event"]
[connection signal="input_event" from="Freezer/FreezerOpen/Close" to="Freezer" method="_on_close_input_event"]
[connection signal="input_event" from="Freezer2/Open" to="Freezer2" method="_on_open_input_event"]
[connection signal="input_event" from="Freezer2/FreezerOpen/Close" to="Freezer2" method="_on_close_input_event"]
[connection signal="area_entered" from="Freezer2/TentacleArea" to="Freezer2" method="_on_tentacle_area_area_entered"]
[connection signal="input_event" from="Freezer2/TentacleArea" to="Freezer2" method="_on_tentacle_area_input_event"]
[connection signal="input_event" from="Freezer3/Open" to="Freezer3" method="_on_open_input_event"]
[connection signal="input_event" from="Freezer3/FreezerOpen/Close" to="Freezer3" method="_on_close_input_event"]
[connection signal="area_entered" from="Freezer3/TentacleArea" to="Freezer3" method="_on_tentacle_area_area_entered"]
[connection signal="input_event" from="Freezer3/TentacleArea" to="Freezer3" method="_on_tentacle_area_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
